--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
             - image: circleci/python:3.7
         steps:
             - checkout
-            - run: print('Hello World!')
+            - run: python3
